--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -1,9 +1,10 @@
 .ProductList {
-  height: 100%;
   overflow-y: scroll;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: max-content;
+  height: 100%;
 }
 
 @media (min-width: 800px) {
